// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`рендер кнопки без текста 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`рендер кнопки заблокированной 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled={true}
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`рендер кнопки с лоадером 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  loading={true}
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`рендер кнопки с текстом 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  >
    Добавить
  </p>
</button>
`;
